--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,21 @@ body{
   margin: 0;
   overflow-x: hidden;
 }
+::-webkit-scrollbar{
+  width: 8px;
+}
+::-webkit-scrollbar-track{
+  background: #2c9ec1;
+}
+::-webkit-scrollbar-thumb{
+  background-image: linear-gradient(#2c9ec1,#88e3ff);
+  border-radius: 8px;
+}
+/* .cover{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: wheat;
+  z-index: 10000;
+} */
+
