--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -9,6 +9,7 @@
     position: absolute;
     z-index: 500;
     width: 100%;
+    
 }
 .body-loader{
     display: flex;
@@ -16,6 +17,9 @@
     align-items: center;
     min-height: 100vh;
     background: #000;
+    background-image: url("https://steamuserimages-a.akamaihd.net/ugc/951857668148675039/DEE6B85887DB25E1C531CC813CE37D2231936DD8/?imw=116&imh=65&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 .h2-loader{
     color: #000;
@@ -23,7 +27,7 @@
     display: flex; 
 }
 h2 span{
-    animation: animate 2s linear infinite;
+    animation: animati 2s linear infinite;
 }
 h2 span:nth-child(1){
     animation-delay: 0s;
@@ -50,7 +54,7 @@ h2 span:nth-child(8){
     animation-delay: 0.7s;
 }
 
-@keyframes animate {
+@keyframes animati {
     0%, 100%
     {
         color: #fff;
