--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,9 +3,11 @@
     color: white;
     height: 10px;
     background-color: black;
+    position: relative;
     /* background-image: url("https://steamuserimages-a.akamaihd.net/ugc/951857668148675039/DEE6B85887DB25E1C531CC813CE37D2231936DD8/?imw=116&imh=65&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true");
     background-repeat: no-repeat;
     background-size: 100%; */
+    z-index: 500;
 }
 .nav-heading{
     font-family: 'Passions Conflict', cursive;
