--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: consolas;
-    background-color: #000;
+    background-color: transparent;
     position: absolute;
     z-index: 500;
     width: 100%;
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #000;
+    background: transparent;
     background-image: url("https://steamuserimages-a.akamaihd.net/ugc/951857668148675039/DEE6B85887DB25E1C531CC813CE37D2231936DD8/?imw=116&imh=65&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true");
     background-repeat: no-repeat;
     background-size: 100%;
